--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,15 +1,11 @@
-
 @media screen and (min-width: 415px) and (max-width: 1920px) and (orientation: portrait) {	
-
     #modules ul{
         margin-left:30px;
         margin-right:30px;
     }
 }
 
-
 @media screen and (min-width: 456px) and (max-width: 500px) and (orientation: portrait) {	
-
     #bloc-services .costume1{
         display: block;
         position: absolute;
@@ -21,7 +17,6 @@
 }
 
 @media screen and (min-width: 501px) and (max-width: 1920px) and (orientation: portrait) {	
-
     #modules ul{
         margin-left:70px;
         margin-right:70px;
@@ -47,7 +42,6 @@
 }
 
 @media screen and (min-width: 576px) and (max-width: 767px) and (orientation: portrait) {	
-
     #bloc-activity h3.mobile-p1{
         letter-spacing: -0.1px;
     }
@@ -58,7 +52,6 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1920px) {	
-
     body{
         line-height: 20px;
     }
@@ -121,10 +114,6 @@
         filter: alpha(opacity=100);
         transition: opacity 0.5s ease-in-out;
     }
-
-    /* ==================================================
-        Mobile Menu Navigation
-    ================================================== */
 
     #menu-nav-mobile{
         background: url(../img/logo1-ac-vect.svg), url(../img/tablet/tablet-menu_arabesque3.png);
@@ -307,7 +296,6 @@
 }
 
 @media screen and (min-width: 834px) and (max-width: 1920px){
-
     body{
         background-color:  #fffae4;
     }
@@ -374,7 +362,6 @@
 }
 
 @media screen and (min-width: 835px) and (max-width: 1365px){
-   
     .covermob,
     .coverdesk{
         display:none;
@@ -389,7 +376,6 @@
 }
 
 @media screen and (min-width: 888px) and (max-width: 991px){
-
     #bloc-services{
         background-position-x: left 50px, right 20px;
         background-position-y: top 100px, top 24px;
@@ -397,7 +383,6 @@
 }
 
 @media screen and (min-width: 950px) and (max-width: 991px){
-
     #bloc-services{
         background-size: 171px 499px, 150px auto;
         background-position-x: left 80px, right 24px;
@@ -406,7 +391,6 @@
 }
 
 @media screen and (min-width: 992px) and (max-width: 1920px){
-
     #menu-nav-mobile{
         background: url(../img/logo1-ac-vect.svg), url(../img/tablet/tablet-menu_arabesque3.png);
         background-repeat: no-repeat, no-repeat;
@@ -474,12 +458,11 @@
     }
 
     footer {
-        height:60px;
+        height:69px;
     }
 }
 
 @media screen and (min-width: 1117px){
-
     #bloc-services{
         position: relative;
         background: url(../img/desktop/angeliquecalfatidotcom_arabesque1.png), url(../img/tablet/tablet_arabesque2.png);
@@ -495,7 +478,6 @@
 }
 
 @media screen and (min-width: 1200px){
-
     body{
         line-height: 23px;
     }
@@ -673,7 +655,6 @@
 }
 
 @media screen and (min-width: 1366px){
-
     #mobile-nav{
         display:none;
     }
@@ -729,9 +710,9 @@
     }
     
     #menu li .current,
-    #menu li a:hover,
-    #menu li a:active,
-    #menu li a:focus{
+    #menu li a:hover
+    /*#menu li a:active,
+    #menu li a:focus*/{
         color:#fffae4;
     }
 
@@ -774,7 +755,6 @@
 }
 
 @media screen and (min-width: 1818px){
-
     #bloc-services{
         background-position-x: left 140px, right 24px;
         background-position-y: bottom, top 24px;
