--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,17 @@
     box-sizing: border-box;
 }
 
+body.modal-open{
+    overflow: hidden;
+    width:100%;
+}
+
 body{
     width:100%;
     line-height: 19px;
     color:#e0dccc;
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
  
 a{
@@ -118,8 +125,6 @@ button:focus {
 /* ==================================================
   Header
 ================================================== */
-
-
     header{
         width:100%;
         height:103px;
@@ -163,7 +168,6 @@ button:focus {
 /* ==================================================
    Mobile Menu Navigation
 ================================================== */
-
     #mobile-nav{
         display:block;
         float: right;
@@ -273,7 +277,7 @@ button:focus {
         color:#e0dccc;
     }
 
-    #navigation-mobile li a:active,
+    /*#navigation-mobile li a:active,*/
     #navigation-mobile li a.current{
         color:#fffae4;
     }
@@ -296,7 +300,6 @@ button:focus {
 /* ==================================================
   Bloc Activity
 ================================================== */
-
     #bloc-acti123{
         display:none;
     }
@@ -320,7 +323,6 @@ button:focus {
 /* ==================================================
    Bloc Services
 ================================================== */
-
     #bloc-services{
         position: relative;
         background-color: #fffae4;
@@ -373,7 +375,6 @@ button:focus {
 /* ==================================================
    Bloc Encadré
 ================================================== */
-
     #bloc-services #bloc-encadre{
         position:relative;
         background: url(../img/angeliquecalfatidotcom_motif-j.gif)repeat; 
@@ -417,11 +418,9 @@ button:focus {
         margin-right:-15px;
     }
         
-
 /* ==================================================
    Bloc Boutique
 ================================================== */
-
     #bloc-boutique{
         position: relative;
         width:100%;
@@ -473,7 +472,6 @@ button:focus {
 /* ==================================================
    Bloc Contact
 ================================================== */
-
     .barre-contact{
         position:relative;
         background-color: #e0dccc;
@@ -545,12 +543,10 @@ button:focus {
 /* ==================================================
    Bloc Footer
 ================================================== */
-
     footer {
         width:100%;
-        height:83px;
         background-color: #040302;
-        padding: 0 15px;
+        padding: 0 15px 15px;
     }
 
     hr{
@@ -573,5 +569,3 @@ button:focus {
         -webkit-text-decoration-line: underline;
                 text-decoration-line: underline;
     }
-
-
